[gd_scene load_steps=2 format=2]

[ext_resource path="res://objects/Camera.gd" type="Script" id=1]

[node name="Camera" type="Camera2D"]
current = true
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="TopMaxPos" type="Position2D" parent="Node2D"]
position = Vector2( 0, -61 )
__meta__ = {
"_gizmo_extents_": 94.0
}

[node name="XMinPos" type="Position2D" parent="Node2D"]
position = Vector2( -94, 0 )
__meta__ = {
"_gizmo_extents_": 94.0
}

[node name="XMaxPos" type="Position2D" parent="Node2D"]
position = Vector2( 94, 0 )
__meta__ = {
"_gizmo_extents_": 94.0
}

[node name="TopMinPos" type="Position2D" parent="Node2D"]
position = Vector2( 0, 61 )
__meta__ = {
"_gizmo_extents_": 94.0
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
